[project]
name = "certbot-onion"
version = "0.3.3"
description = "Certbot authenticator plugin for the onion-csr-01 challenge"
authors = [
    {name = "Q Misell", email = "q@as207960.net"}
]
license = {text = "MIT"}
dependencies = [
    "certbot>=2.6.0"
]
readme = "README.md"

[project.urls]
"Homepage" = "https://acmeforonions.org"
"Repository" = "https://github.com/AS207960/certbot-onion"

[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["certbot_onion*"]

[tool.setuptools]
zip-safe = false
package-dir = {"" = "src"}

[project.entry-points."certbot.plugins"]
onion-csr = "certbot_onion:Authenticator"

[tool.cibuildwheel]
before-all = """curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y;
pip install cryptography"""