[package]
name = "certbot-onion"
version = "0.1.0"
authors = ["Q Misell <q@as207960.net>"]
edition = "2021"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
ed25519-dalek = { version = "2", features = ["hazmat", "zeroize"] }
hex =  "0.4"
openssl = { version = ">=0.10.25", features = ["vendored", "v111"] }
openssl-sys = "0.9"
openssl-src = "=300.3.1"
rand = "0.8"
libc = "0.2"
foreign-types-shared = "0.1"
asn1 = "0.15"
sha2 = "0.10.8"
arti-rpc-client-core = "0.22.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
derive_more = "0.99.18"
base64ct = { version = "1.6.0", features = ["alloc"] }

[lib]
name = "certbot_onion_rust"
crate-type = ["cdylib"]
